Project

General

Profile

Actions

Bug #19880

closed

ceph-osd: abort in BlueStore::OpSequencer::~OpSequencer

Added by Jason Dillaman almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/jdillaman-2017-05-08_11:56:19-rbd-wip-jd-testing-distro-basic-smithi/1114477/teuthology.log

#0  0x00007fbe53cb623b in raise () from /lib64/libpthread.so.0
#1  0x00007fbe56dab9c4 in reraise_fatal (signum=6) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/global/signal_handler.cc:74
#2  handle_fatal_signal (signum=6) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/global/signal_handler.cc:138
#3  <signal handler called>
#4  0x00007fbe52ce01d7 in raise () from /lib64/libc.so.6
#5  0x00007fbe52ce18c8 in abort () from /lib64/libc.so.6
#6  0x00007fbe52cd9146 in __assert_fail_base () from /lib64/libc.so.6
#7  0x00007fbe52cd91f2 in __assert_fail () from /lib64/libc.so.6
#8  0x00007fbe56c57fe0 in boost::intrusive::detail::destructor_impl<boost::intrusive::generic_hook<(boost::intrusive::algo_types)0, boost::intrusive::list_node_traits<void*>, boost::intrusive::member_tag, (boost::intrusive::link_mode_type)1, (boost::intrusive::base_hook_type)0> > (hook=...) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/build/boost/include/boost/intrusive/detail/generic_hook.hpp:48
#9  0x00007fbe56cd9d9b in ~generic_hook (this=0x7fbdb016a180, __in_chrg=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/build/boost/include/boost/intrusive/detail/generic_hook.hpp:192
#10 ~list_member_hook (this=0x7fbdb016a180, __in_chrg=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/build/boost/include/boost/intrusive/list_hook.hpp:207
#11 ~OpSequencer (this=0x7fbdb016a0f0, __in_chrg=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.h:1629
#12 BlueStore::OpSequencer::~OpSequencer (this=0x7fbdb016a0f0, __in_chrg=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.h:1632
#13 0x00007fbe568e421a in RefCountedObject::put (this=0x7fbdb016a0f0) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/common/RefCountedObj.h:61
#14 0x00007fbe56c7751f in intrusive_ptr_release (o=0x7fbdb016a0f0) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.h:2611
#15 ~intrusive_ptr (this=<synthetic pointer>, __in_chrg=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/build/boost/include/boost/smart_ptr/intrusive_ptr.hpp:97
#16 BlueStore::_txc_finish (this=this@entry=0x7fbe60a0ffb0, txc=txc@entry=0x7fbe000e63f0) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.cc:7831
#17 0x00007fbe56c94396 in BlueStore::_txc_state_proc (this=this@entry=0x7fbe60a0ffb0, txc=0x7fbe000e63f0) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.cc:7529
#18 0x00007fbe56caee98 in BlueStore::_kv_sync_thread (this=0x7fbe60a0ffb0) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.cc:8132
#19 0x00007fbe56ce78cd in BlueStore::KVSyncThread::entry (this=<optimized out>) at /usr/src/debug/ceph-12.0.1-2081-g246fc64/src/os/bluestore/BlueStore.h:1728
#20 0x00007fbe53caedc5 in start_thread () from /lib64/libpthread.so.0
#21 0x00007fbe52da273d in clone () from /lib64/libc.so.6
Actions #1

Updated by Sage Weil almost 7 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Sage Weil almost 7 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF