os/bluestore: reorder _deferred_aio_finish

Remove the OpSequencer from the deferred_queue before
marking the txc's completed.  This prevents a race with
_txc_finish trying to reap the completed sequencer that
is still on the deferred_queue, triggering an assert
in the intrusive list hook dtor.

Fixes: http://tracker.ceph.com/issues/19880
Signed-off-by: Sage Weil <sage@redhat.com>